# slurp-engine

./: .gitignore  CMakeLists.txt  Info.plist.in  LICENSE  README.md  code-style
Assets/Brand/: made_with_slurp_engine.aseprite  slurp_engine.aseprite
Assets/Palettes/: dead-weight-8.hex  lava-gb.hex  slso8.aseprite  slso8.hex
Assets/Shaders/1_Vertex/: basic.glsl  default.glsl  overlay.glsl  sprite.glsl  tutorial.glsl
Assets/Shaders/2_Fragment/: basic.glsl  default.glsl  overlay.glsl  progress_bar.glsl  sprite.glsl  tutorial.glsl
Assets/Shaders/Fragment/: tutorial.glsl
Assets/Shaders/Vertex/: tutorial.glsl
Assets/Sounds/: ambient.flp  error.bfxrsound  resource_drop_off.bfxrsound
Assets/Sprites/: 0.aseprite  1.aseprite  2.aseprite  3.aseprite  4.aseprite  5.aseprite  6.aseprite  7.aseprite  8.aseprite  9.aseprite  antibody.aseprite  base.aseprite  base_idle_anim.aseprite  border.aseprite  button.aseprite  button_big.aseprite  button_big_hover.aseprite  button_big_press.aseprite  button_hover.aseprite  button_press.aseprite  button_press_anim.aseprite  enemy.aseprite  exit_button_text.aseprite  font_small.aseprite  game_over_screen.aseprite  gold.aseprite  gold_spawn.aseprite  main_menu.aseprite  main_menu_button_text.aseprite  mine_site_button.aseprite  mine_site_button_hover.aseprite  mine_site_button_icon.aseprite  mine_site_button_pressed.aseprite  mine_site_button_pressed_anim.aseprite  mouse_cursor.aesprite.aseprite  overlay.aseprite  pause_menu.aseprite  play_button_text.aseprite  player.aseprite  player_parry.aseprite  (+34 more)
Engine/Asset/: Asset.cpp  Asset.h  AssetLoader.cpp  AssetLoader.h  Bitmap.cpp  Bitmap.h  Font.cpp  Font.h  Wave.cpp  Wave.h
Engine/Asset/Private/: Asset.cpp  Bitmap.cpp  Wave.cpp
Engine/Asset/Public/: Asset.h  Bitmap.h  Wave.h
Engine/Audio/: AudioLoader.cpp  AudioLoader.h  AudioPlayer.cpp  AudioPlayer.h  PlayingSound.cpp  PlayingSound.h
Engine/Audio/Private/: Audio.cpp  AudioPlayer.cpp  PlayingSound.cpp  Sound.cpp  SoundManager.cpp
Engine/Audio/Public/: Audio.h  AudioPlayer.h  PlayingSound.h  Sound.h  SoundManager.h
Engine/Core/: CollectionTypes.h  Debug.cpp  Debug.h  DynamicDeclaration.h  Geometry.h  Global.h  JobRunner.cpp  JobRunner.h  Logging.h  Mathematics.h  Matrix.h  Random.h  Recording.cpp  Recording.h  Scene.cpp  Scene.h  Settings.h  SlurpEngine.cpp  SlurpEngine.h  SpinLock.h  Timer.h  Types.h
Engine/Core/Private/: Asset.cpp  Debug.cpp  Entity.cpp  EntityManager.cpp  EntityPipeline.cpp  FileWatcherMac.cpp  FileWatcherWin.cpp  JobRunner.cpp  Memory.cpp  Recording.cpp  SpinLock.cpp  Timer.cpp  UpdateRenderPipeline.cpp
Engine/Core/Public/: Asset.h  BitTwiddle.h  CollectionTypes.h  Debug.h  DynamicDeclaration.h  Entity.h  EntityManager.h  EntityPipeline.h  FileWatcher.h  Geometry.h  Global.h  JobRunner.h  Logging.h  Math.h  Matrix.h  Memory.h  Random.h  Recording.h  Settings.h  Timer.h  Types.h  UpdateRenderPipeline.h  Vector.h
Engine/Entity/: Entity.cpp  Entity.h  EntityPipeline.cpp  EntityPipeline.h  EntityPool.h
Engine/Entity/Private/: Entity.cpp  EntityPipeline.cpp
Engine/Entity/Public/: Entity.h  EntityPipeline.h  EntityPool.h
Engine/Input/: Input.h
Engine/Input/Public/: Input.h
Engine/Math/: BitTwiddle.h
Engine/Memory/: MemoryAllocator.h  MemoryConstructs.cpp  MemoryConstructs.h
Engine/Memory/Private/: Memory.cpp  MemoryConstructs.cpp
Engine/Memory/Public/: Memory.h  MemoryAllocator.h  MemoryConstructs.h
Engine/OpenGL/: OpenGL.cpp  OpenGL.h
Engine/OpenGL/Private/: OpenGL.cpp  OpenGLShader.cpp  WinGlad.c
Engine/OpenGL/Public/: OpenGL.h  OpenGLShader.h
Engine/Platform/: CMakeLists.txt  Engine.cpp  Engine.h  MacOS.cpp  SlurpEngine.cpp  SlurpEngine.h  Win32.cpp
Engine/Platform/Private/: CMakeLists.txt  Engine.cpp  MacEngine.cpp  MacOS.cpp  SlurpEngine.cpp  WinEngine.cpp  Windows.cpp
Engine/Platform/Public/: Engine.h  MacEngine.h  Platform.h  SlurpEngine.h  WinEngine.h
Engine/Render/: ColorPalette.h  Material.h  Render.cpp  Render.h  RenderApi.h  RenderInfo.cpp  RenderInfo.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteInstance.cpp  SpriteInstance.h
Engine/Render/Private/: Render.cpp  RenderApi.cpp  RenderInfo.cpp  Sprite.cpp  SpriteAnimation.cpp
Engine/Render/Public/: Material.h  Mesh.h  Render.h  RenderApi.h  (+3 more)
Engine/Update/: Collision.cpp  Collision.h  Physics.h  Update.h
ExternalLibs/: CMakeLists.txt
ExternalLibs/SDL-release-3.2.28/: CMakeLists.txt
ExternalLibs/glad/src/: glad.c
Game/Core/: Game.cpp  Game.h  ZOrder.h
Game/Entities/: Base.cpp  Button.cpp  Button.h  GameOverScreen.cpp  GameOverScreen.h  MineSite.cpp  MineSiteSpawner.cpp  MouseCursor.cpp  MouseCursor.h  NumberDisplay.cpp  NumberDisplay.h  Obstacle.cpp  Obstacle.h  PauseMenu.cpp  PauseMenu.h  ProgressBar.cpp  ProgressBar.h  SpawnControls.cpp  SpawnControls.h  Stopwatch.cpp  Stopwatch.h  StopwatchDisplay.cpp  StopwatchDisplay.h  Turret.cpp  Turret.h  UIButton.cpp  UIButton.h  Worker.cpp  Worker.h
SlurpEngine/: CMakeLists.txt  SlurpEngine.sln
SlurpEngine/Assets/: dead-weight-8.hex  slso8.hex
SlurpEngine/Engine/: Engine.cpp  Engine.vcxproj  WinEngine.cpp
SlurpEngine/Engine/Core/Private/: Timer.cpp  UpdateRenderPipeline.cpp
SlurpEngine/Engine/Core/Public/: Geometry.h
SlurpEngine/Engine/Platform/Private/: CMakeLists.txt  SlurpEngine.cpp  WinEngine.cpp
SlurpEngine/Engine/Platform/Public/: WinEngine.h
SlurpEngine/Engine/Private/: CMakeLists.txt  Collision.cpp  Render.cpp  SlurpEngine.cpp  Timer.cpp  Update.cpp  UpdateRenderPipeline.cpp  WinEngine.cpp
SlurpEngine/Engine/Public/: Audio.hpp  Collision.h  Core.h  Core.hpp  Debug.h  DynamicDeclaration.hpp  Geometry.h  Input.h  Input.hpp  Math.h  Math.hpp  Platform.hpp  Random.h  Random.hpp  Render.h  Render.hpp  SlurpEngine.h  SlurpEngine.hpp  Timer.h  Timer.hpp  Update.h  Update.hpp  UpdateRenderPipeline.h  UpdateRenderPipeline.hpp  Vector.h  Vector.hpp  WinEngine.h  WinEngine.hpp
SlurpEngine/Engine/Render/Private/: Render.cpp
SlurpEngine/commands/: build.bat  shell.bat
SlurpEngine/misc/: build.bat  debug.bat  run.bat  shell.bat
(+45 files in other folders)
